--- a/client/src/pages/styles/Main.module.scss
+++ b/client/src/pages/styles/Main.module.scss
@@ -3,24 +3,26 @@
   flex-direction: column;
   align-items: center;
   //justify-content: flex-start;
-  width: 100%;
-  min-height: 100vh;
-
-
-  .blockvideo{
-    max-width: 1920px;
+  width: 100vw;
+  height: 100vh;
+  background-color: #E1E1E1;
+  .main{
     width: 100%;
-    position: relative;
-    margin-top: -100vh;
-    video{
-      width: 100%;
-      //height: 100%;
-      max-width: 1920px;
-      position: absolute;
-      top: 0px;
-      left: 0px;
-      z-index: -1;
-    }
-  }
+    max-width: 1920px;
+    height: calc(100% - 80px);
+    display: flex;
 
+  }
+  .leftpath{
+    width: 300px;
+    height: 100%;
+    margin-right: 20px;
+  }
+  .centerpath{
+    width: calc(100% - 420px);
+  }
+  .rightpath{
+    width: 80px;
+    margin-left: 20px;
+  }
 }
