--- a/client/src/components/forms/PlusZones.module.scss
+++ b/client/src/components/forms/PlusZones.module.scss
@@ -75,6 +75,7 @@
         input{
           width: 400px;
           height: 40px;
+          padding: 0 10px;
           margin: 0;
           border: 1px solid #CCC;
           outline: none;
