--- a/client/src/pages/styles/Gallery.module.scss
+++ b/client/src/pages/styles/Gallery.module.scss
@@ -172,7 +172,26 @@
   //  transition: 0.2s;
   //  z-index: 100;
   //}
-
+  .backitem{
+    display: none;
+  }
+  &:hover{
+    .backitem{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.8);
+      i{
+        font-size: 40pt;
+        color: #f1f1f1;
+      }
+    }
+  }
   img {
     width: 100%;
     height: 100%;
